[metadata]
name = oai
version = 0.1
description = A Django app to produce static OAI-PMH feeds.
long_description = file: README.md
url = https://github.com/ucldc/oaiapp
author = UC Libraries Digital Collections
author_email = 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: OAI
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 1.11  # Replace "X.Y" as appropriate